--- a/gui/share/rootstock.desktop
+++ b/gui/share/rootstock.desktop
@@ -2,7 +2,7 @@
 Version=1.0
 Type=Application
 Terminal=false
-Icon=rootstock
-Exec=gksu rootstock
+Icon=rootstock_64
+Exec=su-to-root -X --preserve-env --description /usr/share/applications/rootstock.desktop -c rootstock-gtk
 Name=RootStock
 Categories=GNOME;GTK;Utility
